--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.12
 click==8.1.2
+exceptiongroup==1.1.1
 Flask==2.1.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -23,6 +24,7 @@ pluggy==1.0.0
 psycopg2-binary==2.9.5
 py==1.11.0
 pycodestyle==2.8.0
+pygame==2.3.0
 pyparsing==3.0.7
 pytest==7.1.1
 python-dateutil==2.8.2
@@ -35,4 +37,5 @@ toml==0.10.2
 tomli==2.0.1
 urllib3==1.26.9
 Werkzeug==2.1.1
+wonderwords==2.2.0
 zipp==3.7.0
